# write-in-tree

./: .gitignore  Main.hs  TestMain.hs  _license_.txt  cabal.project.local  mentions-on-web.txt  readme.txt  write-in-tree.cabal
Haskell/Technical/: Else.hs  FolderMember.hs  FolderTree.hs  Html.hs  LineTree.hs  ParsePropertyTree.hs  Xml.hs
Haskell/Technical/Simco/: Data.hs  DataLines.hs  DataRender.hs  Layer.hs  Lines.hs  Test.hs
Haskell/Technical/TextTree/: Data.hs  General.hs  MindMap.hs
Haskell/Technical/Xml/: Data.hs  Render.hs
Haskell/WriteInTree/: ChangeIdsToMachine.hs  CommandLine.hs  Compile.hs  Convert.hs  FillPageAddresses.hs  ListIdUs.hs
Haskell/WriteInTree/Document/: Data.hs  File.hs  Folder.hs  Main.hs  ReadFromFile.hs
Haskell/WriteInTree/Document/Core/: Data.hs  Document.hs  ToOutput.hs
Haskell/WriteInTree/Document/Core/Serial/: All.hs  Id.hs  InNodeTextStructure.hs  InlineContent.hs  LanguageVersion.hs  Layers.hs  Node.hs  Paging.hs  Paragraph.hs  Parse.hs  Path.hs  Position.hs  UserIdentifiers.hs
Haskell/WriteInTree/Document/Core/Serial/Id/: Forest.hs  Node.hs
Haskell/WriteInTree/Document/Core/Serial/Link/: InTree.hs  Individual.hs
Haskell/WriteInTree/Document/Core/Serial/Page/: Address.hs  Border.hs  BreakStructure.hs  Count.hs  Cut.hs  Data.hs  Main.hs  Serialize.hs  SiteStructureDiscovery.hs  Tree.hs
Haskell/WriteInTree/Document/Core/Serial/RichTextTree/: Comment.hs  Export.hs  InNodeTextStructure.hs  Ord.hs  Path.hs  Position.hs  for-human.text
Haskell/WriteInTree/Document/Core/Serial/RichTextTree/InNode/: MetaName.hs  MetaStructure.hs  TextStructure.hs
Haskell/WriteInTree/Document/Core/Serial/RichTextTree/Label/: ClassPrefix.hs  Elem.hs  InlineClassCoding.hs  Intermediate.hs  Labeled.hs  Lower.hs  Main.hs  Serialize.hs  Structure.hs  TextSplit.hs
Haskell/WriteInTree/Document/SepProps/: Command_ShowDefault.hs  Data.hs  File.hs  Parse.hs  PropTree.hs  Simco.hs
Haskell/WriteInTree/Output/: Pagination.hs  Sentence.hs  Technical.hs
Haskell/WriteInTree/Output/Xml/: Render.hs
demo/: compile.sh
demo/main/: properties.simco.text  tree.mm
