cabal-version: 3.0

name:           write-in-tree
version:        0.0.0.2
license-file:   _license_.txt
build-type:     Simple

common common
  hs-source-dirs:
    Haskell
  default-extensions: 
    EmptyDataDecls EmptyCase LambdaCase
    NoImplicitPrelude NoMonomorphismRestriction
    InstanceSigs StandaloneDeriving
    BangPatterns
    TypeOperators ExplicitForAll ScopedTypeVariables TypeApplications OverloadedStrings
    TypeInType RankNTypes GADTs ConstraintKinds
    AllowAmbiguousTypes
    LiberalTypeSynonyms
    TypeFamilies TypeFamilyDependencies
    QuantifiedConstraints FlexibleContexts FlexibleInstances MultiParamTypeClasses
    DeriveFunctor DeriveFoldable DeriveTraversable
  ghc-options: 
    -fno-warn-tabs
    -fwarn-incomplete-patterns -fwarn-incomplete-uni-patterns 
    -fwarn-unused-matches
    -Wname-shadowing -Wincomplete-record-updates -Woverflowed-literals -Wmonomorphism-restriction
    -Wwrong-do-bind -Wunticked-promoted-constructors -Wunsupported-llvm-version
    -Worphans -Wsemigroup -Wnoncanonical-monoid-instances -Wnoncanonical-monad-instances
    -Wredundant-constraints -Wunused-imports -Wunused-packages -Wmissing-signatures -Wcompat
    -Wno-missing-home-modules -Werror -fshow-warning-groups
    -O -fspecialise-aggressively -fexpose-all-unfoldings
  build-depends:
      base >=4.12 && <4.16
    , containers >=0.5 && <0.6
    , data-default-class >=0.1 && <0.2
    , directory <=1.4
    , fana ==0.0.0.188
    , filepath <=1.4
    , mtl >=2.2 && <2.3
    , optparse-applicative >=0.14 && <0.17
    , xml >=1.3 && <1.4
  default-language: Haskell2010
  other-modules:
      Technical.Else
      Technical.FolderMember
      Technical.FolderTree
      Technical.Html
      Technical.TextTree.MindMap
      Technical.Xml
      Technical.Xml.Data
      Technical.Xml.Render
      WriteInTree.CommandLine
      WriteInTree.Compile
      WriteInTree.Convert
      WriteInTree.Document.Core.Data
      WriteInTree.Document.Core.Serial.All
      WriteInTree.Document.Core.Serial.LanguageVersion
      WriteInTree.Document.Core.Serial.Link.Individual
      WriteInTree.Document.Core.Serial.Link.InTree
      WriteInTree.Document.Core.Serial.Node
      WriteInTree.Document.Core.Serial.InNodeTextStructure
      WriteInTree.Document.Core.Serial.Path
      WriteInTree.Document.Core.Serial.Position
      WriteInTree.Document.File
      WriteInTree.Document.Main
      WriteInTree.Document.SepProps.Data
      WriteInTree.Document.SepProps.PropTree
      WriteInTree.Document.SepProps.Simco
      WriteInTree.Output.Technical
      WriteInTree.Output.Xml.Render

executable write-in-tree
  import : common
  main-is: ../Main.hs

test-suite try
  import : common
  type: exitcode-stdio-1.0
  main-is: ../TestMain.hs
